@@ -1,3 +1,7 @@
+2000-08-13  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
+
+	* GSWDisplayGroup.m: fixed display next and previous batch.
+
 2000-08-01  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
 
 	* GSWDisplayGroup.m/.h: implemented (-setSelectedObject) to support
